# flask_react_skeleton

./: README.md
backend/: .env.example  .gitignore  pyproject.toml  run_dev.sh
backend/app/: home.py
backend/authent/: auth.py
backend/database/: dataconn.py  schema.sql
backend/toolkit/: tools.py
frontend/: .env.template  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/queries/get/: getQueries.ts
frontend/src/hooks/queries/post/: postQueries.ts
frontend/src/hooks/queries/put/: putQueries.ts
frontend/src/interfaces/: ProfileDto.ts
frontend/src/pages/: Dashboard.tsx  Pricing.tsx  PublicPage.tsx
frontend/src/utils/: ApiPaths.ts
